Fix info sprinkle style circle "cut off" if used in schema-type-field

--- a/src/internal-packages/app/styles/info-sprinkle.less
+++ b/src/internal-packages/app/styles/info-sprinkle.less
@@ -1,7 +1,7 @@
 i.info-sprinkle {
   .fa-icon;
   margin-left: 5px;
-  margin-right: -4px;
+  margin-right: 1px;
   cursor: pointer;
   font-size: 14px;
   position: relative;
